[tool.poetry]
name = "PyTorchYolo"
version = "1.7.2"
readme = "README.md"
repository = "https://github.com/eriklindernoren/PyTorch-YOLOv3"
description = "Minimal PyTorch implementation of YOLO"
authors = ["Florian Vahl <git@flova.de>", "Erik Linder-Noren <eriklindernoren@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
torch = ">=1.10.1, < 1.13.0"
urllib3 =  [
    {version = "<=1.22", python = ">=3.8,<3.9"},
    {version = "^1.23", python = ">=3.9"}
]

[tool.poetry.dev-dependencies]
profilehooks = "^1.12.0"
