[package]
authors = [
    "Without Boats <lee@libertad.ucsd.edu>",
    "Pascal Hertleif <killercup@gmail.com>",
    "Sebastian Garrido <sebasgarcep@gmail.com>",
    "Jonas Platte <mail@jonasplatte.de>",
    "Benjamin Gill <git@bgill.eu>",
    "Andronik Ordian <write@reusable.software>",
]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
description = "Cargo commands for modifying a `Cargo.toml` file.."
homepage = "https://github.com/killercup/cargo-edit"
keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
    "dependencies",
    "crates",
]
license = "Apache-2.0 OR MIT"
name = "cargo-edit"
readme = "README.md"
repository = "https://github.com/killercup/cargo-edit"
version = "0.11.6"
edition = "2021"

[dependencies]
concolor-control = { version = "0.0.7", default-features = false }
cargo_metadata = "0.15.0"
crates-index = "0.18.9"


[build-dependencies]
pretest = { version = "2.1.1", features = ["color-auto"] }

[dev-dependencies]
predicates = { version = "2.1.1", features = ["color-auto"] }
assert_cmd = { version = "2.0.4", features = ["color-auto"] }
assert_fs = { version = "1.0.7", features = ["color-auto"] }



[features]
default = [
    "add",
    "rm",
    "upgrade",
    "set-version",
    "vendored-libgit2",
]
