[package]
authors = [
    "Without Boats <lee@libertad.ucsd.edu>",
]

[dependencies]
concolor-control = { version = "0.0.7", default-features = false }
crates-index = "0.18.9"


[dev-dependencies]
predicates = { version = "2.1.1", features = ["color-auto"] }
trycmd = "0.13.6"

rm = ["cli"]
